--- a/Dockerfile/Dockerfile_rotate
+++ b/Dockerfile/Dockerfile_rotate
@@ -1,8 +1,8 @@
 
-# Utilise une image de base Python
+# Use a base Python image
 FROM python:3.9-slim
 
-# Installe Tesseract, OpenCV et ses dépendances
+# Install Tesseract, OpenCV, and dependencies
 RUN apt-get update && apt-get install -y \
     tesseract-ocr \
     libtesseract-dev \
@@ -10,15 +10,15 @@ RUN apt-get update && apt-get install -y \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-# Définit le répertoire de travail
+# Set the working directory
 WORKDIR /app
 
-# Copie le fichier requirements.txt et installe les dépendances Python
+# Copy the requirements file and install Python dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copie le script Python dans le conteneur
-COPY scripts/read_image.py .
+# Copy the Python script into the container
+COPY scripts/rotate_image.py .
 
-# Définit la commande par défaut pour le conteneur
+# Set the default command for the container
 CMD ["python", "rotate_image.py"]
