--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       dockerfile: Dockerfile/Dockerfile_read
     volumes:
       - .:/app
-    entrypoint: ["python", "read_image.py"]
+    entrypoint: ["python", "/app/scripts/read_image.py"]
 
   rotate:
     build:
@@ -16,4 +16,5 @@ services:
       dockerfile: Dockerfile/Dockerfile_rotate
     volumes:
       - .:/app
-    entrypoint: ["python", "rotate_image.py"]
+    entrypoint: ["python", "/app/scripts/rotate_image.py"]
+
